@@ -1,3 +1,8 @@
+2012-03-28 Philipp Klaus Krause <pkk AT spth.de>
+
+	* support/regression/tests/gcc-torture-execute-981001-1.c:
+	  Fixed #3511512 / #3511513.
+
 2012-03-27 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCCsymt.c,
